tests/errors/surf_type_16.ki
# type/operator: bitor requires Integer operands, not a Float
discard bitor(1.5, 2)
